<resources>
    <string name="app_name">ADP</string>
    <string name="btn_entar">ENTRAR</string>
    <string name="ed_hint_email">Email</string>
    <string name="ed_hint_senha">Senha</string>
    <string name="tw_cadastrese">Não possui login? Cadastre-se!</string>
    <string name="radio_discente">Discente</string>
    <string name="radio_docente">Docente</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="ed_hint_formacao">Formação</string>
    <string name="ed_hint_instituicao">Instituição</string>
    <string name="ed_hint_nome">Nome</string>
    <string name="btn_principal_novo_arco">NOVO ARCO</string>
    <string name="btn_principal_meusarcos">MEUS ARCOS</string>
    <string name="btn_principal_arcoscompartilhados">ARCOS COMPARTILHADOS</string>
    <string name="btn_principal_solicitacoes">SOLICITAÇÕES DE NOVOS ARCOS</string>
    <string name="ed_hint_nomegrupo">NOME DO GRUPO</string>
    <string name="ed_hint_tituloarco">TÍTULO</string>
    <string name="ed_hint_orientador">ORIENTADOR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_criar">CRIAR</string>
    <string name="TOKENAPI">TOKENAPI</string>
    <string name="posso_editar">posso_editar</string>
    <string name="tipo_login">TIPOLOGIN</string>
    <string name="preference_config">MYPREFERENCE</string>
    <string name="ID">ID</string>
    <string name="NOME">NOME</string>
    <string name="FORMACAO">FORMACAO</string>
    <string name="INSTITUICAO">INSTITUICAO</string>
    <string name="EMAIL">EMAIL</string>
    <string name="SENHA">SENHA</string>
    <string name="FOTO">FOTO</string>
    <string name="ed_hint_alertDialog_pesquisar">DIGITE UM NOME</string>
    <string name="btn_alertdilog_pesquisar">PESQUISAR</string>
    <string name="adapter_nome_discente" />
    <string name="texto_inicial">
Olá, seja bem-vindo ao ADP!
Sou um aplicativo, para mediar a prática didática e pedagógica da comunidade acadêmica, com a metodologia ativa da problematização, através de uma tecnologia educativa de processo denominada Arco de Maguerez. Em um ambiente organizado por meio das etapas, é possível que docentes e discentes através de dicas e orientações deste APP, construam juntos uma trajetória flexível, emergidas do contexto de aulas teóricas e práticas.
Esta tecnologia educativa faz parte do produto de uma pesquisa de dissertação, vinculada ao Programa de Mestrado Profissional em Ensino e Saúde na Amazônia da Universidade do Estado do Pará.

    </string>
    <string name="texto_docente_menu">


        Prezado docente, esta área de acesso representa, sua área de trabalho, funciona através de dicas orientadoras inseridas neste APP, para possibilitar que você realize a validação, dos pontos essências para cada etapa de elaboração do Arco Maguerez. De acordo, com a frequência do envio de arquivos pelos grupos de trabalho de discentes, você poderá inseri, comentários e correções, indicado o avanço ou não das etapas do Arco pelos discentes.

1ª. Etapa do arco - Observação da Realidade
Esta etapa do arco orienta uma trajetória pedagógica que tem seu ponto de partida na realidade, em que se insere os discentes da aprendizagem, por meio da seleção de uma situação a ser problematizada ou seja orientar os discentes a eleger um problema de estudo, esse momento objetiva realizar uma leitura sincrética ou ingênua da realidade – o que chamamos de Síncrese.
Você docente deve orienta-los metodologicamente a observarem a realidade com registro de informações colhidas em diferentes formas de acessar a realidade.
- Os discentes devem ser direcionados a observar a realidade;
- Captar diferentes aspectos da realidade observada;
- Observação analítica e crítica da realidade (utilizando os conhecimentos prévios);
Investigar o contexto dos envolvidos com o problema:
- pessoal;
- Geográfico;
 - Histórico;
- Cultural;
 - Social;
 - Econômico.
Nota: Nesta etapa deve ser desestimulado a consulta de informações em bancos de dados formais, deve provoca-los para uma discussão em grupo a partir do esgotamento dos conhecimentos prévios. Todas as etapas devem ser registradas pelos discentes através de parágrafos contextualizados

2ª. Etapa do arco - Levantamento de pontos chaves
Nesta etapa você docente deve orientar os discentes a refletirem sobre o problema escolhido na etapa anterior e os possíveis fatores associados ao problema, mantendo a discussão entre os componentes do grupo, sem consultas formais, através de lembranças vivências, de leituras, notícias e favorecendo o aprendizados significativo e mantendo uma visão sincrética do problema.
Desse modo deve-se estimula-los a pensarem nos possíveis determinantes maiores para o problema que exigem aprofundamentos conceituais, os chamados pontos chaves, pontos de pesquisa ou pontos chaves para estudar.
- Orienta-los a realizar o levantamento de questões fundamentais para o contexto pesquisado; (usuário ou comunidade, ou pontos importantes para a o embasamento teórico);
- Destacam do que foi observado o que é verdadeiramente importante;
- Variáveis mais significativas que determinam a realidade analisada;
- Seleção de pontos de compreensão que podem contribuir para a solução do problema evidenciado.

3ª. Etapa do arco - Teorização
Esta etapa representa o aprendizado fundamentado no rigor científico, a partir da pesquisa dos pontos chaves em fontes de buscas formais, apontados na etapa anterior, pretende-se com o estudo dar respostas fidedignas ao problema extraído de uma parcela da realidade.
Você deve orienta-los ao registro de toda a teorização construindo um texto com base na análise teórica das etapas anteriores (referencial teórico).  Pode ser desenvolvida através de levantamento bibliográfico, aplicação de questionário ou entrevista com pessoas que vivenciam o problema, estimulando a busca por meio de várias fontes de pesquisa: teóricas, legais e históricas.
- Orientar o desenvolvimento da Teorização do problema, através da pesquisa bibliográfica;
- Investigação dos pontos chaves do problema;
- Confronto dos aspectos observados na realidade com a cientificidade;
- Processo de estudo e reflexão;
- Estimular a compreensão profunda sobre a estrutura do problema e suas consequências;

4ª. Etapa do arco – Hipóteses de solução –
Nesta etapa, você deve orientar a elaboração das hipóteses de solução do problema, os discentes poderão desenvolver diferentes instâncias de ação ou níveis de ação, baseado nas reflexões e teorização das etapas anteriores, tendo em vista o foco do problema, deverão ser orientados a elaborar explicações e argumentos para suas hipóteses de solução, através do registro e contextualização de toda a elaboração da proposta de solução.
- Estimular a elaboração de hipóteses de soluções viáveis;
- Cultivo da criatividade e a originalidade;
- Recomendar a utilização como referência de todo o estudo nas etapas anteriores;
- Orientar a considerar os condicionamentos e limitação da realidade;

5ª. Etapa do arco – Aplicação à realidade –
Esta etapa representa, a descrição do método de ação, a partir da escolha de uma ou mais hipóteses de solução elencadas no tópico anterior, por meio da descrição da ação proposta, caracterizando a práxis como ação transformadora.
Você deve orientar os discentes à desenvolverem a capacidade de atuar, conhecer e intervir sobre os problemas, com estímulo à prática da tomada de decisão, apropriada para situações específicas e viáveis a seu nível de aprendizado, por meio da descrição das etapas do planejamento da ação, senso de responsabilidade e compromisso social.
- Orientar a descrição metodológica da ação (O que? Como? Quando? Com quem? Recursos necessários? Quais terão que obter? As ações deverão beneficiar a quem?) ;
- Incentivar a prática das soluções proposta, viáveis e aplicáveis;
- Encorajar para a construção de uma atividade transformadora da realidade;
-  Acompanhar a execução efetiva da realidade com algum grau de intervenção;
- Incitar a utilização dos conceitos aprendidos em situações diferentes.


    </string>
</resources>